// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`counterReset renders 0 1`] = `
Array [
  .c0 {
  counter-reset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  counter-reset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  counter-reset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  counter-reset: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`counterReset renders function 1`] = `
Array [
  .c0 {
  counter-reset: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  counter-reset: has;
}

<div
    className="c0"
  />,
  .c0 {
  counter-reset: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  counter-reset: has;
}

<div
    className="c0"
  />,
]
`;

exports[`counterReset renders invalid theme path 1`] = `
Array [
  .c0 {
  counter-reset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  counter-reset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  counter-reset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  counter-reset: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`counterReset renders negative number 1`] = `
Array [
  .c0 {
  counter-reset: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  counter-reset: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  counter-reset: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  counter-reset: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`counterReset renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  counter-reset: July;
}

@media screen and (min-width:November) {
  .c0 {
    counter-reset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-reset: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-reset: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    counter-reset: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  counter-reset: July;
}

@media screen and (min-width:November) {
  .c0 {
    counter-reset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-reset: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-reset: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    counter-reset: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  counter-reset: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    counter-reset: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-reset: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-reset: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    counter-reset: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  counter-reset: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    counter-reset: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-reset: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-reset: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    counter-reset: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`counterReset renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    counter-reset: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-reset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-reset: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    counter-reset: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    counter-reset: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-reset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-reset: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    counter-reset: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    counter-reset: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-reset: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-reset: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    counter-reset: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    counter-reset: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-reset: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-reset: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    counter-reset: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`counterReset renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  counter-reset: July;
}

@media May {
  .c0 {
    counter-reset: August;
  }
}

@media April {
  .c0 {
    counter-reset: September;
  }
}

@media January {
  .c0 {
    counter-reset: November;
  }
}

@media April {
  .c0 {
    counter-reset: August;
  }
}

@media June {
  .c0 {
    counter-reset: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  counter-reset: July;
}

@media May {
  .c0 {
    counter-reset: August;
  }
}

@media April {
  .c0 {
    counter-reset: September;
  }
}

@media January {
  .c0 {
    counter-reset: November;
  }
}

@media April {
  .c0 {
    counter-reset: August;
  }
}

@media June {
  .c0 {
    counter-reset: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  counter-reset: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    counter-reset: November;
  }
}

@media April {
  .c0 {
    counter-reset: January;
  }
}

@media January {
  .c0 {
    counter-reset: December;
  }
}

@media April {
  .c0 {
    counter-reset: April;
  }
}

@media June {
  .c0 {
    counter-reset: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  counter-reset: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    counter-reset: November;
  }
}

@media April {
  .c0 {
    counter-reset: January;
  }
}

@media January {
  .c0 {
    counter-reset: December;
  }
}

@media April {
  .c0 {
    counter-reset: April;
  }
}

@media June {
  .c0 {
    counter-reset: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`counterReset renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    counter-reset: July;
  }
}

@media April {
  .c0 {
    counter-reset: August;
  }
}

@media January {
  .c0 {
    counter-reset: September;
  }
}

@media April {
  .c0 {
    counter-reset: November;
  }
}

@media June {
  .c0 {
    counter-reset: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    counter-reset: July;
  }
}

@media April {
  .c0 {
    counter-reset: August;
  }
}

@media January {
  .c0 {
    counter-reset: September;
  }
}

@media April {
  .c0 {
    counter-reset: November;
  }
}

@media June {
  .c0 {
    counter-reset: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    counter-reset: January;
  }
}

@media April {
  .c0 {
    counter-reset: December;
  }
}

@media January {
  .c0 {
    counter-reset: April;
  }
}

@media April {
  .c0 {
    counter-reset: May;
  }
}

@media June {
  .c0 {
    counter-reset: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    counter-reset: January;
  }
}

@media April {
  .c0 {
    counter-reset: December;
  }
}

@media January {
  .c0 {
    counter-reset: April;
  }
}

@media April {
  .c0 {
    counter-reset: May;
  }
}

@media June {
  .c0 {
    counter-reset: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`counterReset renders postitive number 1`] = `
Array [
  .c0 {
  counter-reset: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  counter-reset: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  counter-reset: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  counter-reset: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`counterReset renders string 1`] = `
Array [
  .c0 {
  counter-reset: July;
}

<div
    className="c0"
  />,
  .c0 {
  counter-reset: July;
}

<div
    className="c0"
  />,
  .c0 {
  counter-reset: June;
}

<div
    className="c0"
  />,
  .c0 {
  counter-reset: June;
}

<div
    className="c0"
  />,
]
`;

exports[`counterReset renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`counterReset renders valid theme path 1`] = `
Array [
  .c0 {
  counter-reset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  counter-reset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  counter-reset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  counter-reset: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
